<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Canadian Tax</string>
    <string name="taxText"> Tax :</string>
    <string name="totalText"> Total :</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="point">.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="divide">÷</string>
    <string name="equalto">=</string>
    <string name="taxPlus">TAX+</string>
    <string name="taxMinus">TAX-</string>
    <string name="allprovinces">All Provinces</string>
    <string name="province">Provinces</string>
    <string name="aftertax">After Tax</string>
    <string name="beforetax">Before Tax</string>
</resources>