<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="4"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:src="@android:drawable/ic_input_delete" />

    <TextView
        android:id="@+id/display"
        style="@style/CalculatorTextDisplay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/delete"
        android:text="@string/zero" />

    <TextView
        android:id="@+id/taxTextView"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/taxText"
        android:textColor="#DAEFED"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/taxDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textColor="#DAEFED"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/totalText"
        android:textColor="#DAEFED"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/totalDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textColor="#DAEFED"
        android:textSize="22sp" />

    <Button
        android:id="@+id/taxPlus"
        style="@style/CalculatorButton"
        android:layout_columnSpan="2"
        android:text="@string/taxPlus" />

    <Button
        android:id="@+id/taxMinus"
        style="@style/CalculatorButton"
        android:layout_columnSpan="2"
        android:text="@string/taxMinus" />

    <Button
        android:id="@+id/seven"
        style="@style/CalculatorButton"
        android:text="@string/seven" />

    <Button
        android:id="@+id/eight"
        style="@style/CalculatorButton"
        android:text="@string/eight" />

    <Button
        android:id="@+id/nine"
        style="@style/CalculatorButton"
        android:text="@string/nine" />

    <Button
        android:id="@+id/divide"
        style="@style/CalculatorButton"
        android:text="@string/divide" />

    <Button
        android:id="@+id/four"
        style="@style/CalculatorButton"
        android:text="@string/four" />

    <Button
        android:id="@+id/five"
        style="@style/CalculatorButton"
        android:text="@string/five" />

    <Button
        android:id="@+id/six"
        style="@style/CalculatorButton"
        android:text="@string/six" />

    <Button
        android:id="@+id/multiply"
        style="@style/CalculatorButton"
        android:text="@string/multiply" />

    <Button
        android:id="@+id/one"
        style="@style/CalculatorButton"
        android:text="@string/one" />

    <Button
        android:id="@+id/two"
        style="@style/CalculatorButton"
        android:text="@string/two" />

    <Button
        android:id="@+id/three"
        style="@style/CalculatorButton"
        android:text="@string/three" />

    <Button
        android:id="@+id/minus"
        style="@style/CalculatorButton"
        android:text="@string/minus" />

    <Button
        android:id="@+id/zero"
        style="@style/CalculatorButton"
        android:text="@string/zero" />

    <Button
        android:id="@+id/point"
        style="@style/CalculatorButton"
        android:text="@string/point" />

    <Button
        android:id="@+id/equalsto"
        style="@style/CalculatorButton"
        android:text="@string/equalto" />

    <Button
        android:id="@+id/plus"
        style="@style/CalculatorButton"
        android:text="@string/plus" />

</GridLayout>